# sfj

./: .gitignore  CMakeLists.txt  README.md
black_label/: CMakeLists.txt
black_label/black_label/: dynamics.hpp  file_buffer.hpp  file_system_watcher.hpp  log.hpp  lsystem.hpp  path.hpp  renderer.hpp  rendering.hpp  shared_library.hpp  thread_pool.hpp  utility.hpp  world.hpp
black_label/black_label/container/: darray.hpp  svector.hpp
black_label/black_label/file_system_watcher/: types_and_constants.hpp
black_label/black_label/file_system_watcher/windows/: data.hpp
black_label/black_label/renderer/: assets.hpp  camera.hpp  glew_setup.hpp  light.hpp  light_grid.hpp  material.hpp  pass.hpp  pipeline.hpp  program.hpp  screen_aligned_quad.hpp  types_and_constants.hpp
black_label/black_label/renderer/argument/: material.hpp
black_label/black_label/renderer/cpu/: mesh.hpp  model.hpp  texture.hpp
black_label/black_label/renderer/gpu/: buffer.hpp  framebuffer.hpp  mesh.hpp  model.hpp  texture.hpp  vertex_array.hpp
black_label/black_label/renderer/gpu/argument/: mesh.hpp
black_label/black_label/renderer/storage/: file_loading.hpp  model.hpp
black_label/black_label/renderer/storage/cpu/: model.hpp
black_label/black_label/renderer/storage/gpu/: buffer.hpp  model.hpp  texture.hpp  vertex_array.hpp
black_label/black_label/rendering/: assets.hpp  initialize.hpp  light.hpp  light_grid.hpp  material.hpp  pass.hpp  pipeline.hpp  program.hpp  screen_aligned_quad.hpp  setup.hpp  types_and_constants.hpp  view.hpp
black_label/black_label/rendering/argument/: material.hpp
black_label/black_label/rendering/cpu/: mesh.hpp  model.hpp  texture.hpp
black_label/black_label/rendering/gpu/: buffer.hpp  framebuffer.hpp  mesh.hpp  model.hpp  texture.hpp  vertex_array.hpp
black_label/black_label/rendering/gpu/argument/: mesh.hpp
black_label/black_label/shared_library/: utility.hpp
black_label/black_label/thread_pool/: dynamic_interface.hpp  task.hpp  tasks.hpp  types.hpp
black_label/black_label/utility/: algorithm.hpp  boost_atomic_extensions.hpp  cache_file.hpp  checksum.hpp  log_severity_level.hpp  range.hpp  scoped_stream_suppression.hpp  warning_suppression.hpp
black_label/black_label/utility/serialization/: array.hpp  darray.hpp  glm.hpp  path.hpp  vector.hpp
black_label/black_label/utility/threading_building_blocks/: path.hpp
black_label/black_label/world/: dynamic_interface.hpp  entities.hpp
black_label/cmake/: dependencies_common.cmake  dependencies_dynamics.cmake  dependencies_renderer.cmake  dependencies_rendering.cmake  dependencies_thread_pool.cmake
black_label/libraries/dynamics/source/: dynamics.cpp
black_label/libraries/file_buffer/source/: file_buffer.cpp
black_label/libraries/file_system_watcher/source/: file_system_watcher.unix.cpp  file_system_watcher.windows.cpp
black_label/libraries/log/source/: log.cpp
black_label/libraries/lsystem/source/: lsystem.cpp
black_label/libraries/renderer/shaders/: NVIDIA pragmas.glsl  alchemy_ambient_occlusion.glsl  ambient_occlusion.fragment.glsl  blur.fragment.glsl  buffering.fragment.glsl  buffering.vertex.glsl  clear.fragment.glsl  cryengine2_ambient_occlusion.fragment.glsl  horizon_based_ambient_occlusion.glsl  lighting.fragment.glsl  lighting.vertex.glsl  null.vertex.glsl  pass-through.vertex.glsl  rendering_pipeline.json  starcraft2_ambient_occlusion.fragment.glsl  texture_buffer_test.fragment.glsl  tone_mapper.fragment.glsl  unrealengine4_ambient_occlusion.fragment.glsl  unrealengine4_ambient_occlusion_TEST_IN_EYE_COORDS.fragment.glsl  volumetric_obscurance_ambient_occlusion.fragment.glsl
black_label/libraries/renderer/source/: renderer.cpp
black_label/libraries/renderer/source/renderer/: assets.cpp  camera.cpp  glew_setup.cpp  light_grid.cpp  pass.cpp  pipeline.cpp  program.cpp  screen_aligned_quad.cpp
black_label/libraries/rendering/shaders/: alchemy_ambient_occlusion.glsl  ambient_occlusion.fragment.glsl  blur.fragment.glsl  buffering.fragment.glsl  buffering.vertex.glsl  clear.fragment.glsl  cryengine2_ambient_occlusion.fragment.glsl  debug_view.fragment.glsl  default.pipeline.json  default.pipeline.json.bak  geometry_aware_blur.fragment.glsl  hbao.pipeline.json  horizon_based_ambient_occlusion.glsl  indirect_lighting.pipeline.json  ldm.fragment.glsl  ldm.vertex.glsl  ldm_ambient_occlusion.pipeline.json  light_buffering.fragment.glsl  lighting.fragment.glsl  lighting.vertex.glsl  null.vertex.glsl  oit.fragment.glsl  oit.vertex.glsl  pass-through.vertex.glsl  photon_splatting.fragment.glsl  photon_splatting.geometry.glsl  photon_splatting.vertex.glsl  photon_tracing.fragment.glsl  photon_tracing_and_splatting.fragment.glsl  rendering_pipeline.json  starcraft2_ambient_occlusion.fragment.glsl  texture_buffer_test.fragment.glsl  tone_mapper.fragment.glsl  unrealengine4_ambient_occlusion.fragment.glsl  unrealengine4_ambient_occlusion_TEST_IN_EYE_COORDS.fragment.glsl  volumetric_obscurance_ambient_occlusion.fragment.glsl
black_label/libraries/shared_library/source/: shared_library.cpp
black_label/libraries/thread_pool/source/: thread_pool.cpp
black_label/libraries/thread_pool/test/: test_1.cpp
black_label/libraries/world/source/: world.cpp
black_label/libraries/world/test/: test_1.cpp
cave_demo/: CMakeLists.txt
cave_demo/assets/luts/: slog2sg_to_rec709_STARCentral.001.cube  slog2sg_to_rec709_STARCentral.001.txt  slog2sg_to_rec709_STARCentral.002.cube  slog2sg_to_rec709_STARCentral.002.txt  slog2sg_to_rec709_v01.cube
cave_demo/assets/maya_scripts/: export.py
cave_demo/assets/models/: .gitignore
cave_demo/assets/models/cornell-box/: cornell.fbx  cornell.max
cave_demo/assets/models/references/: sphere_rough.fbx  sphere_rough.mb
cave_demo/assets/models/teapot/: teapot_single_sided.mtl
cave_demo/binaries/cave_demo/source/: application.cpp  initialize_logging.cpp  main.cpp  options.cpp  runtime_interface.cpp  utility.cpp  window.cpp
cave_demo/cave_demo/: application.hpp  initialize_logging.hpp  options.hpp  utility.hpp  window.hpp
cmake/: FindAssimp.cmake  FindFBX.cmake  (+12 more)
(+51 files in other folders)
